# dockeree

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  create_pull_request.yml  lint.yml  pre-release.yml  release.yml  test.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml
dockeree/: __init__.py  builder.py  launcher.py
tests/: test_builder.py  test_docker.py
