[project]
name = "dockeree"
version = "0.6.3"
description = "Make it easy to build and manager Docker images."
authors = [{ name = "Benjamin Du", email = "longendu@yahoo.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "GPL-2.0-only" }
keywords = [
    "Docker",
    "container",
    "build",
    "management",
]
dependencies = [
    "pandas>=1.2.0",
    "networkx>=2.5",
    "docker>=6.1.0",
    "requests>=2.20.0",
    "loguru>=0.6.0",
    "PyYAML>=6.0",
    "pygit2>=1.9.1",
    "pytest>=3.0",
]

[project.urls]
Repository = "https://github.com/legendu-net/dockeree"

[dependency-groups]
dev = [
    "pytype>=2024.10.11",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
